<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chat.ChatActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/text_chat"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"
        android:background="@color/primary_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/border_shape"
                    android:paddingTop="2dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_rememberLastSelection="true" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:boxStrokeWidth="0dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/default_number"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_carrier_number"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:fontFamily="@font/avenir"
                        android:hint="@string/default_number"
                        android:inputType="phone"
                        android:maxLength="16"
                        android:padding="0dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <include
                android:id="@+id/phone"
                layout="@layout/layout_phone_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chat"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing=".05"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/text_chat"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />


            <FrameLayout
                android:id="@+id/banner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_shape"
                android:hint="@string/default_number"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/banner_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:maxHeight="100dp"
                    android:fontFamily="@font/avenir"
                    android:gravity="top"
                    android:hint="@string/text_enter_message"
                    android:inputType="textMultiLine"
                    android:minHeight="45dp"
                    android:padding="4dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>